<resources>
    <string name="app_name">सावित्रीबाई फुले महिला एकात्मता समाज मंडळ</string>


    <string-array name="menus_name">
        <item>आरोग्य तपासणी </item>
        <item>कार्यक्रम व्यवस्थापन</item>
        <item>नवजात बालक नोंदणी </item>
    </string-array>

    <string name="arogya_tapasni">आरोग्य तपासणी</string>
    <string name="karyakram">कार्यक्रम व्यवस्थापन</string>
    <string name="janma_nond">जन्म नोंद </string>
    <string name="arogya_feedback">आरोग्य अभिप्राय </string>
    <string name="sahayta">सहायता </string>
    <string name="sampark">संपर्क</string>
    <string name="name_work">कार्यक्रमाचे नाव</string>


    <string-array name="delivery_place">
        <item>ठिकाण</item>
        <item>घरी</item>
        <item>दवाखाना</item>
        <item>खाजगी दवाखाना</item>
    </string-array>

    <string name="next">पुढे</string>
    <string name="skip">वगळा</string>
    <string name="start">थांबा </string>

    <string name="slide_1_title">आरोग्य तपासणी</string>
    <string name="slide_1_desc">इथे आपण आरोग्य बँकेतर्फे तपासणी केलेल्या रुग्णांची माहिती जतन करू शकता तसेच हि माहिती सर्व्हरला अपलोड करू शकता. </string>
    <string name="slide_2_title">कार्यक्रम व्यवस्थापन</string>
    <string name="slide_2_desc">इथे आपण आरोग्य बँकेतर्फे आयोजित केलेल्या कार्यक्रमाची माहिती जतन करू शकता .तसेच त्यामध्ये कार्यक्रमाचे नाव ,वक्त्याचे नाव ,उपस्थित संख्या आणि दिनांक जतन  करू शकता.</string>
    <string name="slide_3_title">जन्म नोंद</string>
    <string name="slide_3_desc">इथे आपण  नजजात बालकांची जन्म नोंद जतन करू शकता. आणि जन्म नोंद केलेल्या बालकांची यादी पाहू शकता.</string>
    <string name="slide_4_title">आरोग्य अभिप्राय</string>
    <string name="slide_6_title">संजीवनी</string>
    <string name="slide_6_desc">इथे आपण संजीवनी तर्फे तपासणी केलेल्या रुग्णांची माहिती जतन करू शकता तसेच हि माहिती सर्व्हरला अपलोड करू शकता. </string>
    <string name="slide_7_title">उज्ज्वल भारत</string>
    <string name="slide_7_desc">इथे आपण उज्ज्वल भारत तर्फे तपासणी केलेल्या रुग्णांची माहिती जतन करू शकता तसेच हि माहिती सर्व्हरला अपलोड करू शकता. </string>
    <string name="slide_8_title">GLSAK</string>
    <string name="slide_8_desc">इथे आपण GLSAK तर्फे तपासणी केलेल्या रुग्णांची माहिती जतन करू शकता तसेच हि माहिती सर्व्हरला अपलोड करू शकता. </string>
    <string name="slide_9_title">SRAK</string>
    <string name="slide_9_desc">इथे आपण SRAK तर्फे तपासणी केलेल्या रुग्णांची माहिती जतन करू शकता तसेच हि माहिती सर्व्हरला अपलोड करू शकता. </string>
    <string name="slide_10_title">SGAK</string>
    <string name="slide_10_desc">इथे आपण SGAK तर्फे तपासणी केलेल्या रुग्णांची माहिती जतन करू शकता तसेच हि माहिती सर्व्हरला अपलोड करू शकता. </string>


    <string name="slide_4_desc">इथे आपण आरोग्य बँके अंतर्गत केलेल्या कार्यांबद्दल आपला अभिप्राय नोंद करू शकता.</string>
    <string name="slide_5_title">संपर्क</string>

    <string name="slider1_title">नैसर्गिक संसाधन व्यवस्थापन व सहकार्य</string>
    <string name="slider2_title">पूर्व प्राथमिक शिक्षण</string>
    <string name="slider3_title">सार्वजनिक आरोग्य</string>
    <string name="slider4_title">महिला जनजागृती</string>
    <string name="slider5_title">कौशल्य विकास</string>
    <string name="slider6_title">महिला सशक्तीकरण</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
