<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hatchers.hedgewar.activity.MenuActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:title="Hedgewar Survey"
        app:titleTextColor="@color/white"
        android:background="#2AB79A"
        android:id="@+id/toolbar">

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:cardCornerRadius="4dp"
        android:id="@+id/cardview_image"
        android:layout_below="@+id/toolbar">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/card_image"
            android:src="@mipmap/hedgewar_image"
            android:scaleType="centerCrop"/>

    </android.support.v7.widget.CardView>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="2"
        android:columnCount="1"

        android:background="@color/menu_background"
        android:layout_below="@+id/cardview_image">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp"
            android:layout_margin="5dp"
            >

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
               >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#2AB79A"
                    android:orientation="vertical"
                    android:padding="15dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/arogya_image"
                        android:src="@drawable/arogya_tapasani"
                        android:layout_gravity="center"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/arogya_text"
                        android:text="@string/arogya_tapasni"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/card_view2"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#2AB79A"
                    android:orientation="vertical"
                    android:padding="15dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/karyakram_image"
                        android:src="@drawable/karyakram"
                        android:layout_gravity="center"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/karyakram_text"
                        android:text="@string/karyakram"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:gravity="center_horizontal"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp"
            android:layout_margin="5dp">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/card_view3"
                android:layout_weight="1"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#2AB79A"
                    android:orientation="vertical"
                    android:padding="15dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/janma_nond_image"
                        android:src="@drawable/janmnond"
                        android:layout_gravity="center"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/janma_nond_text"
                        android:text="@string/janma_nond"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/card_view4"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#2AB79A"
                    android:padding="15dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/arogya_feedback_image"
                        android:src="@drawable/feedback"
                        android:layout_gravity="center"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/arogya_feedback_text"
                        android:text="@string/arogya_feedback"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:gravity="center_horizontal"/>

                </LinearLayout>


            </android.support.v7.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp"
            android:layout_margin="5dp">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/card_view5"
                android:layout_weight="1"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#2AB79A"
                    android:orientation="vertical"
                    android:padding="15dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/sahayta_image"
                        android:src="@drawable/help"
                        android:layout_gravity="center"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/sahayta_text"
                        android:text="@string/sahayta"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/card_view6"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#2AB79A"
                    android:padding="15dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/sampark_image"
                        android:src="@drawable/sampark"
                        android:layout_gravity="center"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/sampark_text"
                        android:text="@string/sampark"
                        android:textColor="@color/white"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"/>

                </LinearLayout>


            </android.support.v7.widget.CardView>


        </LinearLayout>

    </GridLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/frame_layout">
    </FrameLayout>
</RelativeLayout>

